wp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
  strategy:
    type: Recreate
    # deployment distribution
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - image: wordpress
          name: wordpress
          ports:
          - containerPort: 80
            name: wordpress
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          volumeMounts:
          - mountPath: "/var/www/html"
            name: volume
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: azurefile

---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  labels:
    app: wordpress
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: wordpress
  
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
    cert-manager.io/cluster-issuer: letsencrypt-staging
    #appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - haksunglee.xyz
      secretName: letsencrypt-secret
  rules:
  - host: haksunglee.xyz
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: wordpress-service
            port:
              number: 80
    # http:
    #   paths:
    #   - path: /jen
    #     pathType: Prefix
    #     backend:
    #       service:
    #         name: jenkins
    #         port:
    #           number: 8080
